force-app/main/default/objects/Account/fields/Account_Audit__c.field-meta.xml
<CustomField>
    <fullName>Account_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Audit</label>
    <type>Checkbox</type>
</CustomField>