force-app/main/default/objects/Account/fields/BoardEx__Client_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>BoardEx__Client_Organization_ID__c</fullName>
    <label>BoardEx Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>