force-app/main/default/objects/Account/fields/fdsdeploy__FDSEntityId__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__FDSEntityId__c</fullName>
    <label>FactSet Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>