force-app/main/default/objects/Account/fields/Last_Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Subject__c</fullName>
    <label>Last Activity Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>