force-app/main/default/objects/Account/fields/Market_Cap_MM__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap_MM__c</fullName>
    <label>Market Cap (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>