force-app/main/default/objects/Account/fields/Market_Cap_Private__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Cap Private</label>
    <type>Checkbox</type>
</CustomField>