force-app/main/default/objects/Account/fields/Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Date__c</fullName>
    <inlineHelpText>Automatically populated with the date of the next open task or event related to this account.</inlineHelpText>
    <label>Next Activity</label>
    <type>Date</type>
</CustomField>