force-app/main/default/objects/Account/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <inlineHelpText>Automatically populated with subject of the next open task or event related to this account.</inlineHelpText>
    <label>Next Step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>