force-app/main/default/objects/Account/fields/plaunch__avatar_url__c.field-meta.xml
<CustomField>
    <fullName>plaunch__avatar_url__c</fullName>
    <description>Company Logo/Avatar Image URL</description>
    <inlineHelpText>Company Logo/Avatar Image URL</inlineHelpText>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>