force-app/main/default/objects/Account/fields/plaunch__Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Brand_Name__c</fullName>
    <description>The name this company is best know for and that is used by the company on social
        platforms (eg. LinkedIn™)</description>
    <inlineHelpText>The name this company is best know for and that is used by the company on social
        platforms (eg. LinkedIn™)</inlineHelpText>
    <label>LinkedIn™ Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>