force-app/main/default/objects/Account/fields/plaunch__LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LinkedIn__c</fullName>
    <description>LinkedIn™ Profile URL e.g. https://www.linkedin.com/company/pipelaunch</description>
    <inlineHelpText>LinkedIn™ Profile URL e.g. https://www.linkedin.com/company/pipelaunch</inlineHelpText>
    <label>LinkedIn™</label>
    <type>Url</type>
</CustomField>