force-app/main/default/objects/Account/fields/plaunch__LinkedInNumericalId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LinkedInNumericalId__c</fullName>
    <description>Unique identification number assigned to each LinkedIn™ company page. It cannot be
        changed and is used as an “address” for the company page. This ID is useful because it never
        changes, even if the vanity URL changes. PipeLaunch uses this ID to improve the matching
        algorithm.</description>
    <inlineHelpText>Unique identification number assigned to each LinkedIn™ company page. Used to
        improve PipeLaunch matching algorithm. Example: www.linkedin.com/company/12345678</inlineHelpText>
    <label>LinkedIn™ Numerical Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>