force-app/main/default/objects/Account/fields/Tier_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tier_Formula__c</fullName>
    <formula>IF(ISPICKVAL(Tier__c, &quot;Tier 1&quot;), IMAGE(&quot;https://rpmanagement.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068a7000000YfGr&amp;operationContext=CHATTER&amp;contentId=05Ta7000000oTmn&quot;, &quot;&quot; ,24,24),
IF(ISPICKVAL(Tier__c, &quot;Tier 2&quot;), IMAGE(&quot;https://rpmanagement.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068a7000000YfIT&amp;operationContext=CHATTER&amp;contentId=05Ta7000000oRbV&quot;, &quot;&quot; ,24,24),
IF(ISPICKVAL(Tier__c, &quot;Tier 3&quot;), IMAGE(&quot;https://rpmanagement.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068a7000000YfK5&amp;operationContext=CHATTER&amp;contentId=05Ta7000000oToP&quot;, &quot;&quot; ,24,24),
IF(ISPICKVAL(Tier__c, &quot;Tier 4&quot;), IMAGE(&quot;https://rpmanagement.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068a7000000YfLh&amp;operationContext=CHATTER&amp;contentId=05Ta7000000oTq1&quot;, &quot;&quot; ,24,24),
IF(ISPICKVAL(Tier__c, &quot;Tier 5&quot;), IMAGE(&quot;https://rpmanagement.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068a7000000YfNJ&amp;operationContext=CHATTER&amp;contentId=05Ta7000000oTrd&quot;, &quot;&quot; ,24,24), &quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>