force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TICKER</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Market_Cap_MM__c</columns>
    <columns>Market_Cap_Private__c</columns>
    <columns>Tier_Formula__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Next_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>