force-app/main/default/objects/Account/listViews/Investment_Accounts.listView-meta.xml
<ListView>
    <fullName>Investment_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Market_Cap_MM__c</columns>
    <columns>Market_Cap_Private__c</columns>
    <columns>Tier_Formula__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Last_Activity_Subject__c</columns>
    <columns>Next_Activity_Date__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TICKER</field>
        <operation>notEqual</operation>
    </filters>
    <label>Investment Accounts</label>
</ListView>